tests/dockerfile/graph_builder/checks/resources/EnvGitSslNoVerify/fail/Dockerfile.run.shell
FROM alpine:3.15

RUN ABC=123 echo test; GIT_SSL_NO_VERIFY=0 git clone https://github.com/bridgecrewio/checkov.git ;DEF=456 echo lol;
RUN ABC=123 echo test;GIT_SSL_NO_VERIFY=0 git clone https://github.com/bridgecrewio/checkov.git;DEF=456 echo lol;
RUN ABC=123 echo test ;GIT_SSL_NO_VERIFY=0 git clone https://github.com/bridgecrewio/checkov.git; DEF=456 echo lol;

RUN ABC=123 echo test&& GIT_SSL_NO_VERIFY=0 git clone https://github.com/bridgecrewio/checkov.git &&DEF=456 echo lol;
RUN ABC=123 echo test&&GIT_SSL_NO_VERIFY=0 git clone https://github.com/bridgecrewio/checkov.git&&DEF=456 echo lol;
RUN ABC=123 echo test &&GIT_SSL_NO_VERIFY=0 git clone https://github.com/bridgecrewio/checkov.git&& DEF=456 echo lol;

RUN ABC=123 echo test|| GIT_SSL_NO_VERIFY=0 git clone https://github.com/bridgecrewio/checkov.git ||DEF=456 echo lol;
RUN ABC=123 echo test||GIT_SSL_NO_VERIFY=0 git clone https://github.com/bridgecrewio/checkov.git||DEF=456 echo lol;
RUN ABC=123 echo test ||GIT_SSL_NO_VERIFY=0 git clone https://github.com/bridgecrewio/checkov.git|| DEF=456 echo lol;

RUN ABC=123 echo test| GIT_SSL_NO_VERIFY=0 git clone https://github.com/bridgecrewio/checkov.git |DEF=456 echo lol;
RUN ABC=123 echo test|GIT_SSL_NO_VERIFY=0 git clone https://github.com/bridgecrewio/checkov.git|DEF=456 echo lol;
RUN ABC=123 echo test |GIT_SSL_NO_VERIFY=0 git clone https://github.com/bridgecrewio/checkov.git| DEF=456 echo lol;

RUN ABC=123      echo test;       GIT_SSL_NO_VERIFY=0         git clone https://github.com/bridgecrewio/checkov.git ;     DEF=456          echo lol;
RUN ABC=123      echo test ;       GIT_SSL_NO_VERIFY=0         git clone https://github.com/bridgecrewio/checkov.git;     DEF=456          echo lol;
